istio/node-middleware.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-middleware-node
  labels:
    app: grpc-middleware-node
    service: grpc-middleware-node
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 1234
      name: grpc
  selector:
    app: grpc-middleware-node
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-middleware-node-v1
  labels:
    app: grpc-middleware-node
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-middleware-node
        version: v1
    spec:
      containers:
        - name: grpc-middleware-node
          image: zcong/istio-grpc-demo-ts:latest
          imagePullPolicy: IfNotPresent
          command: ['node', './dist/middleware.js']
          ports:
            - containerPort: 1234
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-middleware-node-v2
  labels:
    app: grpc-middleware-node
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-middleware-node
        version: v2
    spec:
      containers:
        - name: grpc-middleware-node
          image: zcong/istio-grpc-demo-ts:latest
          imagePullPolicy: IfNotPresent
          command: ['node', './dist/middleware.js']
          ports:
            - containerPort: 1234
