istio/server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-grpc-server
  labels:
    app: node-grpc-server
    service: node-grpc-server
spec:
  ports:
    - port: 80
      targetPort: 1234
      name: grpc
  selector:
    app: node-grpc-server
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-grpc-server-v1
  labels:
    app: node-grpc-server
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: node-grpc-server
        version: v1
    spec:
      containers:
        - name: node-grpc-server
          image: zcong/istio-grpc-demo-ts:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1234
