istio/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-web-node
  labels:
    app: grpc-web-node
    service: grpc-web-node
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: grpc-web-node
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-web-node-v1
  labels:
    app: grpc-web-node
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-web-node
        version: v1
    spec:
      containers:
        - name: grpc-web-node
          image: zcong/istio-grpc-demo-ts:latest
          imagePullPolicy: IfNotPresent
          command: ['node', './dist/web.js']
          ports:
            - containerPort: 8080
